crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__super__bound_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/bound_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @1) ∅
      (method method [(local this @0) (local arg @1)] []
         (block
            (print (+ (+ "A.method(" (local arg @1)) ")")))))
   (class B (global @2) (global A @1)
      (method getClosure [(local this @0)] [None]
         (block
            (return (super (cell super @0) (local super @0) method))))
      (method method [(local this @0) (local arg @1)] [None]
         (block
            (print (+ (+ "B.method(" (local arg @1)) ")")))))
   (var closure (global @3) (call +3 (attr (call +3 (global B @2)) getClosure)))
   (expr (call +4 (global closure @3) "arg")))

----- stderr -----
