crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__super__reassign_superclass.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/reassign_superclass.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Base (global @3) ∅
      (method method [(local this @0)] []
         (block
            (print "Base.method()"))))
   (class Derived (global @4) (global Base @3)
      (method method [(local this @0)] [None]
         (block
            (expr (call +1 (super (cell super @0) (local super @0) method))))))
   (class OtherBase (global @5) ∅
      (method method [(local this @0)] []
         (block
            (print "OtherBase.method()"))))
   (var derived (global @6) (call +6 (global Derived @4)))
   (expr (call +7 (attr (global derived @6) method)))
   (expr (= (global Base @3) (global OtherBase @5)))
   (expr (call +7 (attr (global derived @6) method))))

----- stderr -----
