crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__super__super_in_closure_in_inherited_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/super_in_closure_in_inherited_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @1) ∅
      (method say [(local this @0)] []
         (block
            (print "A"))))
   (class B (global @2) (global A @1)
      (method getClosure [(cell this @1)] [None, None]
         (block
            (fun closure (local @0) [] [Some(1), Some(0)]
               (block
                  (expr (call +0 (super (cell super @1) (cell super @0) say)))))
            (return (local closure @0))))
      (method say [(local this @0)] [None]
         (block
            (print "B"))))
   (class C (global @3) (global B @2)
      (method say [(local this @0)] [None]
         (block
            (print "C"))))
   (expr (call +4 (call +4 (attr (call +4 (global C @3)) getClosure)))))

----- stderr -----
