crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__super__this_in_superclass_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/this_in_superclass_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Base (global @3) ∅
      (method init [(local this @0) (local a @1)] []
         (block
            (expr (= (setattr (local this @0) a) (local a @1)))
            (init-return))))
   (class Derived (global @4) (global Base @3)
      (method init [(local this @0) (local a @1) (local b @2)] [None]
         (block
            (expr (call +3 (super (cell super @0) (local super @0) init) (local a @1)))
            (expr (= (setattr (local this @0) b) (local b @2)))
            (init-return))))
   (var derived (global @5) (call +5 (global Derived @4) "a" "b"))
   (print (attr (global derived @5) a))
   (print (attr (global derived @5) b)))

----- stderr -----
